# memory-allocator

./: README.md
allocator/: CMakeLists.txt  general_use
allocator/include/: arena.h
allocator/src/: arena.c
allocator/tests/: fragmentation.c  general_use.c
arena-allocator/: CMakeLists.txt
arena-allocator/include/: arena.h
arena-allocator/src/: arena.c
arena-allocator/tests/: alignment.c  general_use.c  speed.c
chunk_allocator/: CMakeLists.txt
chunk_allocator/include/: alloc.h
chunk_allocator/src/: alloc.c
chunk_allocator/tests/: free_reuse.c  general_use.c  many_allocs.c
memory-tests/stack-permament/: main.c  new.txt
memory-tests/stack-syscall/: Makefile  main.c  stack.s
memory-tests/struct-alignment/: Makefile  main.c
tests/stack-permament/: stack.s
tests/stack-pointer/: Makefile  main.c  stack  stack.s
tests/stack-usercall/: main.c
